@@ -2011,7 +2011,7 @@
 		<widget class="GtkCheckButton" id="showplayed">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Display "Played" status in episode list</property>
+                  <property name="label" translatable="yes">Display unplayed status in episode list</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
