@@ -1,3 +1,8 @@
+Tue,  3 Apr 2007 13:43:35 +0200 <thp@perli.net>
+        * src/gpodder/libpodcasts.py: Only display icon on unplayed items
+        * src/gpodder/gpodder.py: Rename "Played" column to "New"
+        * data/gpodder.glade: Rewrite text to display "New/Unplayed" column
+
 Tue,  3 Apr 2007 13:14:02 +0200 <thp@perli.net>
         * src/gpodder/liblogger.py: Enhance the log() function to accept a 
           "sender" keyword argument that contains the object tha sends the 
